--- a/generators/CMakeLists.txt
+++ b/generators/CMakeLists.txt
@@ -26,9 +26,9 @@ Set(SYSTEM_INCLUDE_DIRECTORIES
   ${GEANT3_INCLUDE_DIR}
 )
 
-if(PLUTO_FOUND)
-set(SYSTEM_INCLUDE_DIRECTORIES ${SYSTEM_INCLUDE_DIRECTORIES} ${PLUTO_INCLUDE_DIR})
-EndIf(PLUTO_FOUND)
+#if(PLUTO_FOUND)
+#set(SYSTEM_INCLUDE_DIRECTORIES ${SYSTEM_INCLUDE_DIRECTORIES} ${PLUTO_INCLUDE_DIR})
+#EndIf(PLUTO_FOUND)
 
 include_directories(${INCLUDE_DIRECTORIES})
 Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
