--- a/physics/femto/alternative/CMakeLists.txt
+++ b/physics/femto/alternative/CMakeLists.txt
@@ -1,23 +1,17 @@
-add_subdirectory(femto/fsiTools)
-add_subdirectory(femto/MpdFemtoMaker)
-add_subdirectory(femto/MpdFemtoMakerUser)
-add_subdirectory(femto/alternative)
-add_subdirectory(photons)
+# Create a library called "MpdFemtoMaker"
 
-# Create a library called "MpdPhysics" which includes the source files given in the array.
-# The extension is already found. Any number of sources could be listed here.
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
  ${CMAKE_SOURCE_DIR}/mcstack
  ${CMAKE_SOURCE_DIR}/passive
  ${CMAKE_SOURCE_DIR}/mpdbase
+ ${CMAKE_SOURCE_DIR}/mpddst
  ${CMAKE_SOURCE_DIR}/mpdfield
  ${CMAKE_SOURCE_DIR}/tpc
  ${CMAKE_SOURCE_DIR}/lhetrack
  ${CMAKE_SOURCE_DIR}/kalman
- ${CMAKE_SOURCE_DIR}/mpddst
- ${CMAKE_SOURCE_DIR}/physics
-)
+ ${CMAKE_SOURCE_DIR}/physics/femto/alternative
+ )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
@@ -38,12 +32,15 @@ link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
- MpdRoInvMassTask.cxx
+MpdFemtoContainer.cxx
+MpdFemtoShareQualityPairCut.cxx 
+MpdFemtoHistos.cxx 
+MpdFemto.cxx 
 )
 
 Set(HEADERS)
-Set(LINKDEF MpdPhysicsLinkDef.h)
-Set(LIBRARY_NAME MpdPhysics)
-Set(DEPENDENCIES Core Base MpdDst)
+Set(LINKDEF LinkDef.h)
+Set(LIBRARY_NAME MpdFemtoAlternative)
+Set(DEPENDENCIES Core Base MpdBase)
 
 GENERATE_LIBRARY()
