--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,7 @@
 # Allowed line format:
 # 0. Empty and commented lines
 # 1. <path ending with />  @owner_1 @owner_2     @owner_N
+#    Example: /scripts/ @roleg @hnatics
 #    Ending a path in a `/` will specify the code owners for every file nested in that directory, on any level
 
 # Project owner
