--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,9 +4,47 @@
 #    Example: /scripts/ @roleg @hnatics
 #    Ending a path in a `/` will specify the code owners for every file nested in that directory, on any level
 
-# Project owner
-/ @roleg 
+# Default (project) owner
+#----------------------------------------------------------------------------------
+/                              @roleg 
 
-# for testing purposes only
-/scripts/ @roleg @hnatics 
-/config/  @busa @hnatics
+
+# System
+#----------------------------------------------------------------------------------
+/scripts/                      @roleg @hnatics 
+
+
+# Detectors
+#----------------------------------------------------------------------------------
+# TPC
+/tpc/                          @zinchenk  @abychov
+
+# FFD
+/ffd/                          @nlashmanov
+
+# EMC
+/emc/                          @boiana2012
+
+# MCORD
+/mcord/                        @Wielanek
+
+
+# STS  (ITS)
+/sts/                          @vkondrat
+
+# TOF
+/tof/                          @lobastov
+
+# ZDC  (FHCAL)
+/zdc/                          @marina 
+
+
+# Reconstruction
+#----------------------------------------------------------------------------------
+/kalman/                       @zinchenk
+
+/mpdpid/                       @zinchenk @amudrokh
+
+
+# Analysis
+#-------------------
