BUILD: Added external/ and build*/ to .gitignore since they appear in the source tree and are not part of mpdroot

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ Testing/
 # build directory & data directory
 
 build/
+build*/
+external/
 examples/advanced/Tutorial3/macro/data/*
 !examples/advanced/Tutorial3/macro/data/dummy.txt
 examples/MQ/serialization/data_io/*
