CPC: Removed detector CPC (directory cpc). Also removed directory macro/cpc. Inside file CMakeLists.txt removed line add_subdirectory(cpc). Inside directory lhetrack removed files MpdEctTrackFinderCPC.* linked to the detector CPC and fixed lhetrack/CMakeLists.txt accordingly. Removed unused includes inside lhetrack/CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,7 +214,7 @@ add_subdirectory (clustering)
 add_subdirectory (emc) # Cluster
 add_subdirectory (ffd)
 add_subdirectory (sts)
-add_subdirectory (cpc)
+# add_subdirectory (cpc)
 add_subdirectory (bmd)
 add_subdirectory (mcord)
 add_subdirectory (physics) #MpdBase MpdMCStack Kalman MpdPid LHETrack
