--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,9 @@ IF (NOT ALIBUILD)
  IF(NOT DEFINED ENV{SIMPATH})
   MESSAGE(FATAL_ERROR "You did not define the environment variable SIMPATH which is nedded to find the external packages. Please set this variable and execute cmake again.") 
  ENDIF(NOT DEFINED ENV{SIMPATH})
+ IF(NOT DEFINED ENV{ROOTSYS})
+  MESSAGE(FATAL_ERROR "You did not define the environment variable ROOTSYS which is nedded to find Root. Please set this variable and execute cmake again.")
+ ENDIF(NOT DEFINED ENV{ROOTSYS})
 
  SET(SIMPATH $ENV{SIMPATH})
  SET(FAIRROOTPATH $ENV{FAIRROOTPATH})
@@ -59,6 +62,23 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})
 Set(CheckSrcDir "${FAIRROOTPATH}/share/fairbase/cmake/checks")
 
 find_package(FairRoot REQUIRED)
+# Taken from FairSoftLib.cmake start
+set(CMAKE_CONFIGURATION_TYPES "Debug" "Release" "RelWithDebInfo")
+## this warnings disable compilation due to the errors in code don't use until you know you need them set(_warnings "-Wshadow -Wall -Wextra -Wpedantic")
+set(CMAKE_C_FLAGS_DEBUG                "-Og -g ${_warnings}")
+set(CMAKE_C_FLAGS_RELEASE              "-O2 -DNDEBUG")
+set(CMAKE_C_FLAGS_RELWITHDEBINFO       "-O2 -g ${_warnings} -DNDEBUG")
+set(CMAKE_C_FLAGS_RELWITHDEBUGINFO       "-O2 -g ${_warnings} -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG              "-Og -g ${_warnings}")
+set(CMAKE_CXX_FLAGS_RELEASE            "-O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO     "-O2 -g ${_warnings} -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELWITHDEBUGINFO     "-O2 -g ${_warnings} -DNDEBUG")
+set(CMAKE_Fortran_FLAGS_DEBUG          "-Og -g ${_warnings}")
+set(CMAKE_Fortran_FLAGS_RELEASE        "-O2 -DNDEBUG")
+set(CMAKE_Fortran_FLAGS_RELWITHDEBINFO "-O2 -g ${_warnings} -DNDEBUG")
+set(CMAKE_Fortran_FLAGS_RELWITHDEBUGINFO "-O2 -g ${_warnings} -DNDEBUG")
+## JANO - unset if previously set before flags    unset(_warnings)
+# Taken from FairSoftLib.cmake end
 
 # Load some basic macros which are needed later on
 include(FairMacros)
@@ -146,7 +166,7 @@ If(${ROOT_LIBRARY_DIR} MATCHES /lib/root)
   set(BOOST_ROOT ${SIMPATH})
   set(GSL_DIR ${SIMPATH})
 Else(${ROOT_LIBRARY_DIR} MATCHES /lib/root)
-  set(BOOST_ROOT ${SIMPATH}/basics/boost)
+  set(BOOST_ROOT ${SIMPATH})
   set(GSL_DIR ${SIMPATH}/basics/gsl)
 EndIf(${ROOT_LIBRARY_DIR} MATCHES /lib/root)
 ENDIF (NOT ALIBUILD)
@@ -170,6 +190,8 @@ find_package(GSL REQUIRED)
 # set a variable which should be used in all CMakeLists.txt
 # Defines all basic include directories from fairbase
 SetBasicVariables()
+set(BASE_INCLUDE_DIRECTORIES ${BASE_INCLUDE_DIRECTORIES} ${SIMPATH}/include/root ${SIMPATH}/include/vmc)
+include_directories(${SIMPATH}/include/root  ${SIMPATH}/include/vmc)
 find_package(FairLogger)
 SET(PATH ${EXECUTABLE_OUTPUT_PATH} ${PATH})
 set(MPDROOT TRUE)
