Removed strawendcap detector (directory strawendcap). To acomplish this, also MpdEctTrackFinder had to be removed from lhetrack since they were deeply linked together. Two changes were made inside files that stayed. Inside lhetrack/MpdItsKalmanTrack was removed constructor based on the MpdEctKalmanTrack class that has been removed. Inside tof/MpdTofMatching.cpp inside function Exec was removed part using aECTkfTracks variable. While this may not have impact on the program, in the cycle through nKFTracks condition for postponing of matching with ETof has been changed.

--- a/lhetrack/CMakeLists.txt
+++ b/lhetrack/CMakeLists.txt
@@ -50,9 +50,9 @@ MpdItsKalmanTrack.cxx
 MpdEctKalmanTrack.cxx
 #MpdEctTrackFinderTof.cxx
 #MpdEctTrackFinderTofTpc.cxx
-MpdEctTrackFinderTpc.cxx
+#MpdEctTrackFinderTpc.cxx
 #MpdEctTrackFollow2Tpc.cxx
-MpdSftTrackFinderTpc.cxx
+#MpdSftTrackFinderTpc.cxx
 #MpdTpcTrackFollow2Sft.cxx
 MpdKfPrimaryVertexFinder.cxx
 #MpdTrackFinderIts.cxx
@@ -60,7 +60,6 @@ MpdTrackFinderIts5spd.cxx
 MpdVertexZfinder.cxx
 MpdTpcDedxTask.cxx
 #MpdKfV0Fitter.cxx
-MpdEctTrackFinderTof.cxx
 MpdMotherFitterPart.cxx
 #MpdMotherFitterTrac.cxx
 MpdParticle.cxx
@@ -89,9 +88,9 @@ MpdItsKalmanTrack.h
 MpdEctKalmanTrack.h
 #MpdEctTrackFinderTof.h
 #MpdEctTrackFinderTofTpc.h
-MpdEctTrackFinderTpc.h
+#MpdEctTrackFinderTpc.h
 #MpdEctTrackFollow2Tpc.h
-MpdSftTrackFinderTpc.h
+#MpdSftTrackFinderTpc.h
 #MpdTpcTrackFollow2Sft.h
 MpdKfPrimaryVertexFinder.h
 #MpdTrackFinderIts.h
@@ -99,7 +98,6 @@ MpdTrackFinderIts5spd.h
 MpdVertexZfinder.h
 MpdTpcDedxTask.h
 #MpdKfV0Fitter.h
-MpdEctTrackFinderTof.h
 MpdMotherFitterPart.h
 #MpdMotherFitterTrac.h
 #lhe.h
