--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ check_permissions:
     paths:
       - build
   script:
-    - test $OS_TYPE = "centos7" && source scl_source enable devtoolset-7
+    - test $OS_TYPE = "centos7" && source /opt/rh/devtoolset-7/enable
     - mkdir build
     - cd build
     - cmake "$CI_PROJECT_DIR"
@@ -114,7 +114,7 @@ runMC:ubuntu:
     - docker
     - cvmfs
   script:
-    - test $OS_TYPE = "centos7" && source scl_source enable devtoolset-7
+    - test $OS_TYPE = "centos7" && source /opt/rh/devtoolset-7/enable
     - source build/config.sh
     - root -b -q -l "$CI_PROJECT_DIR/macro/mpd/reco.C" | tee output.txt
     - (if grep -q "Macro finished successfully." output.txt; then $(exit 0); else $(exit -1); fi);
@@ -154,15 +154,14 @@ run_reco:ubuntu:
     - rm -rf build
     - mkdir build
     - cd build
-    - | 
-      source scl_source enable devtoolset-7
-      sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairsoft\/jun19p1/g" ../SetEnv.sh
-      sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairroot\/v18.2.0/g" ../SetEnv.sh
-      source ../SetEnv.sh
-      echo "/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME"
-      cmake -DCMAKE_INSTALL_PREFIX=/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME ..
-      make -j 5
-      make install
+    - source /opt/rh/devtoolset-7/enable
+    - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairsoft\/jun19p1/g" ../SetEnv.sh
+    - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairroot\/v18.2.0/g" ../SetEnv.sh
+    - source ../SetEnv.sh
+    - echo "/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME"
+    - cmake -DCMAKE_INSTALL_PREFIX=/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME ..
+    - make -j 5
+    - make install
     - ssh $STRATUM_0 "sudo cvmfs_server transaction nica.jinr.ru"
     - rsync --filter='-p .cvmfscatalog' --filter='-p .cvmfsautocatalog' -a /cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME $STRATUM_0:/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/
     - ssh $STRATUM_0 "sudo cvmfs_server publish nica.jinr.ru"
