Fix runMC job by sourcing devtoolset correctly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ build:ubuntu:
     paths:
       - macro/mpd/evetest.root
   script:
-    - test $OS_TYPE = "centos7" && source scl_source enable devtoolset-7
+    - test $OS_TYPE = "centos7" && source /opt/rh/devtoolset-7/enable
     - source build/config.sh
     - root -b -q -l '$CI_PROJECT_DIR/macro/mpd/runMC.C("auau.09gev.mbias.98k.ftn14","$VMCWORKDIR/macro/mpd/evetest.root",0,2)' | tee output.txt
     - (if grep -q "Macro finished successfully." output.txt; then $(exit 0); else $(exit -1); fi);
