--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,10 @@ stages:
  - codeOwners
  
 before_script:
- - export SIMPATH=/cvmfs/nica.jinr.ru/$OS_TYPE/fairsoft/apr21_patches
- - export FAIRROOTPATH=/cvmfs/nica.jinr.ru/$OS_TYPE/fairroot/v18.6_patches
- - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$OS_TYPE\/fairsoft\/apr21_patches/g" SetEnv.sh
- - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$OS_TYPE\/fairroot\/v18.6_patches/g" SetEnv.sh
+ - export SIMPATH=/cvmfs/nica.jinr.ru/$OS_TYPE/fairsoft/mpd
+ - export FAIRROOTPATH=/cvmfs/nica.jinr.ru/$OS_TYPE/fairroot/mpd
+ - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$OS_TYPE\/fairsoft\/mpd/g" SetEnv.sh
+ - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$OS_TYPE\/fairroot\/mpd/g" SetEnv.sh
  - source ./SetEnv.sh
  
 variables:
@@ -59,7 +59,7 @@ check_permissions:
   <<: *only-default
   
 build:centos:
-  image: git.jinr.ru:5005/nica/docker-images/centos7/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/centos7/base:latest
   variables:
     OS_TYPE: "centos7"
   tags:
@@ -68,9 +68,9 @@ build:centos:
   <<: *build
 
 build:ubuntu:
-  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:latest
   variables:
-    OS_TYPE: "ubuntu2004"
+    OS_TYPE: "ubuntu"
   tags: 
     - docker
     - cvmfs
@@ -93,7 +93,7 @@ build:ubuntu:
   <<: *only-default
   
 runMC:centos:
-  image: git.jinr.ru:5005/nica/docker-images/centos7/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/centos7/base:latest
   variables:
     OS_TYPE: "centos7"
   dependencies:
@@ -101,9 +101,9 @@ runMC:centos:
   <<: *runMC
 
 runMC:ubuntu:
-  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:latest
   variables:
-    OS_TYPE: "ubuntu2004"
+    OS_TYPE: "ubuntu"
   dependencies:
     - build:ubuntu
   <<: *runMC
@@ -122,7 +122,7 @@ runMC:ubuntu:
   <<: *only-default
   
 run_reco:centos:
-  image: git.jinr.ru:5005/nica/docker-images/centos7/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/centos7/base:latest
   variables:
     OS_TYPE: "centos7"
   dependencies:
@@ -131,9 +131,9 @@ run_reco:centos:
   <<: *run_reco
   
 run_reco:ubuntu:
-  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:apr21_v18.6
+  image: git.jinr.ru:5005/nica/docker-images/ubuntu/base:latest
   variables:
-    OS_TYPE: "ubuntu2004"
+    OS_TYPE: "ubuntu"
   dependencies:
     - build:ubuntu
     - runMC:ubuntu
@@ -155,8 +155,8 @@ run_reco:ubuntu:
     - mkdir build
     - cd build
     - source /opt/rh/devtoolset-7/enable
-    - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairsoft\/jun19p1/g" ../SetEnv.sh
-    - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairroot\/v18.2.0/g" ../SetEnv.sh
+    - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairsoft\/apr21p1/g" ../SetEnv.sh
+    - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairroot\/v18.6.4/g" ../SetEnv.sh
     - source ../SetEnv.sh
     - echo "/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME"
     - cmake -DCMAKE_INSTALL_PREFIX=/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME ..
