Fixed dictionary creation.

--- a/physics/pwg2/resonances/CMakeLists.txt
+++ b/physics/pwg2/resonances/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SRCS
  MpdRoInvMassTask.cxx
 )
 
+Set(LINKDEF MpdResonancesLinkDef.h)
 Set(LIBRARY_NAME MpdResonances)
 Set(DEPENDENCIES Core Base MpdDst)
 
