Fine tuning of dE/dx determination.

--- a/tpc/CMakeLists.txt
+++ b/tpc/CMakeLists.txt
@@ -11,6 +11,8 @@ set(INCLUDE_DIRECTORIES
  ${CMAKE_SOURCE_DIR}/tof
  ${CMAKE_SOURCE_DIR}/lhetrack
  ${CMAKE_SOURCE_DIR}/kalman
+ ${CMAKE_SOURCE_DIR}/mpddst/mcDst
+ ${CMAKE_SOURCE_DIR}/generators
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
