Preparation of new approach to build without the deprecated SIMPATH variable. Also few fixes in cros-referencing inside cmake files and adding missing two class includes.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -5,4 +5,4 @@
  #         GNU Lesser General Public Licence version 3 (LGPL) version 3,        #  
  #                  copied verbatim in the file "LICENSE"                       #
  ################################################################################
-add_subdirectory(modules)
+add_subdirectory(modulesLegacy)
