--- a/generators/CMakeLists.txt
+++ b/generators/CMakeLists.txt
@@ -9,6 +9,7 @@ IF(${req_gcc_major_vers} MATCHES "4" AND NOT ${req_gcc_minor_vers} MATCHES "0")
 ENDIF(${req_gcc_major_vers} MATCHES "4" AND NOT ${req_gcc_minor_vers} MATCHES "0")
 
 add_subdirectory(genFactory)
+add_subdirectory(unigen_format)
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
